--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
 <script src="js/lang.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/world_gen.js"></script>
+<script src="js/setup_team.js"></script> <script src="js/roster.js"></script>
 </body>
 </html>
