--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 🇵🇱 PL <i class="arrow down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#" onclick="setLanguage('pl')">🇵🇱 PL</a>
-                <a href="#" onclick="setLanguage('en')">🇺🇸 EN</a>
+                <a href="#" onclick="setLanguage('pl')">🇵🇱 Polski</a>
+                <a href="#" onclick="setLanguage('en')">🇺🇸 English</a>
             </div>
         </div>
     </header>
