--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Elite Buzzer League</title>
+    <title>Elite Basket League</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
@@ -67,7 +67,7 @@
     </header>
 
     <main class="hero-content">
-        <h1 class="main-title" data-i18n="welcome_title">ELITE BUZZER LEAGUE</h1>
+        <h1 class="main-title" data-i18n="welcome_title">ELITE BASKET LEAGUE</h1>
         <div class="auth-box">
             <h2 data-i18n="login_header">Panel Managera</h2>
             <div class="auth-inputs">
