--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
     <div id="manager-nav" class="nav-container" style="display:none;">
         <button class="btn-tab active" onclick="switchTab('m-roster')">ZAWODNICY</button>
+        <button class="btn-tab" onclick="switchTab('m-training')">TRENING</button>
         <button class="btn-tab" onclick="switchTab('m-market')">RYNEK</button>
         <button class="btn-tab" onclick="switchTab('m-schedule')">TERMINARZ</button>
         <button class="btn-tab" onclick="switchTab('m-draft')">DRAFT</button>
@@ -145,6 +146,15 @@
         <h3>Skład Drużyny: <span id="team-name-display">...</span></h3>
         <div id="roster-container">Pobieranie zawodników...</div>
     </div>
+
+    <div id="m-training" class="tab-content" style="background: #000; padding: 0; border: none;">
+        <div id="app-main-view">Pobieranie panelu treningowego...</div>
+    </div>
+
+    <div id="m-market" class="tab-content">
+        <h3>Rynek Transferowy</h3>
+        <div id="market-container">Ładowanie ofert...</div>
+    </div>
 </div>
 
 <script src="js/lang.js"></script>
@@ -153,6 +163,7 @@
 <script src="js/world_gen.js"></script>
 <script src="js/draft.js"></script>
 <script src="js/manager.js"></script>
+<script type="module" src="index.js"></script>
 
 <script type="module">
     import { applySiteSettings } from './js/site_styles.js';
@@ -182,6 +193,12 @@
         if (currentUserRole === 'manager') {
             if (tabId === 'm-roster' && typeof renderRoster === 'function') renderRoster(); 
             if (tabId === 'm-market' && typeof renderTransferMarket === 'function') renderTransferMarket();
+            
+            // Integracja z nowym modułem treningu
+            if (tabId === 'm-training') {
+                const { initApp } = await import('./js/app/app.js');
+                initApp();
+            }
         }
         
         if (currentUserRole === 'admin') {
@@ -202,7 +219,6 @@
         }
     }
 
-    // Funkcja wywoływana z auth.js po zalogowaniu
     async function setupUI(userRole) {
         currentUserRole = userRole;
         document.getElementById('landing-page').style.display = 'none';
@@ -222,7 +238,6 @@
             switchTab('m-roster');
         }
     }
-    // Udostępnienie setupUI globalnie dla modułu auth.js
     window.setupUI = setupUI;
 </script>
 
