--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
-        /* Twoje style CSS */
         .landing-hero {
             position: relative;
             width: 100%;
@@ -46,7 +45,6 @@
         .tab-content { display: none; min-height: 80vh; background: #f4f7f6; }
         .tab-content.active { display: block; }
         
-        /* Styl nagłówka aplikacji */
         header.app-header {
             background: white;
             padding: 15px 30px;
@@ -127,13 +125,11 @@
     </div>
 
     <div id="m-roster" class="tab-content">
-        <div id="roster-view-container">
-            </div>
+        <div id="roster-view-container"></div>
     </div>
 
     <div id="m-training" class="tab-content">
-        <div id="app-main-view">
-            </div>
+        <div id="app-main-view"></div>
     </div>
 
     <div id="admin-tab-gen" class="tab-content" style="padding: 30px;">
@@ -186,7 +182,6 @@
     }
 
     async function switchTab(tabId) {
-        // UI: Przełączanie przycisków i widoczności
         document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
         document.querySelectorAll('.btn-tab').forEach(btn => btn.classList.remove('active'));
         
@@ -196,17 +191,16 @@
         const btn = document.querySelector(`[onclick="switchTab('${tabId}')"]`);
         if (btn) btn.classList.add('active');
 
-        // LOGIKA: Ładowanie nowych modułów
         if (currentUserRole === 'manager') {
-            // Import głównego kontrolera aplikacji (js/app/app.js)
-            const { initApp, showRoster, showTraining } = await import('./js/app/app.js');
+            const { showRoster, showTraining } = await import('./js/app/app.js');
 
             if (tabId === 'm-roster') {
+                // Czyścimy kontener Treningu, żeby nic się nie nakładało
+                document.getElementById('app-main-view').innerHTML = '';
                 await showRoster();
             } else if (tabId === 'm-training') {
-                // Przenosimy element app-main-view do kontenera treningu jeśli trzeba
-                const view = document.getElementById('app-main-view');
-                document.getElementById('m-training').appendChild(view);
+                // Czyścimy kontener Zawodników
+                document.getElementById('roster-view-container').innerHTML = '';
                 await showTraining();
             } else if (tabId === 'm-market' && typeof renderTransferMarket === 'function') {
                 renderTransferMarket();
@@ -238,8 +232,10 @@
         } else {
             document.getElementById('admin-nav').style.display = 'none';
             document.getElementById('manager-nav').style.display = 'flex';
+            // WAŻNE: initManagerData może wywoływać stare renderowanie zawodników.
+            // Jeśli widzisz podwójną listę, usuń wywołanie renderRoster() wewnątrz initManagerData w manager.js.
             if (typeof initManagerData === 'function') await initManagerData(); 
-            switchTab('m-roster'); // Startujemy od zawodników
+            switchTab('m-roster'); 
         }
     }
     window.setupUI = setupUI;
