--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <div id="m-training" class="tab-content"><div id="training-view-container"></div></div>
     <div id="m-market" class="tab-content"><div id="market-view-container"></div></div>
     <div id="m-media" class="tab-content"><div id="media-view-container"></div></div> 
+    <div id="m-schedule" class="tab-content"><div id="schedule-view-container"></div></div>
     <div id="m-finances" class="tab-content"><div id="finances-view-container"></div></div>
 </div>
 
