--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Elite Basket League - Manage Your Basketball Team</title>
+    <title>EBL - Manage Your Basketball Team</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/market.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -1219,6 +1219,11 @@
 
     <div id="m-finances" class="tab-content">
         <div id="finances-view-container"></div>
+    </div>
+    
+    <!-- DODANO: Kontener dla modułu League -->
+    <div id="m-league" class="tab-content">
+        <!-- Moduł League będzie renderowany tutaj -->
     </div>
 </div>
 
