--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@
         
         // Lista adminów (tutaj możesz dodać swoje emaile)
         const adminEmails = [
-            'strubbe23@icloud.com',
+            'strubbe23@gmail.com',
            // DODAJ SWÓJ EMAIL TUTAJ
         ];
         
