--- a/index.html
+++ b/index.html
@@ -1221,6 +1221,11 @@
         <div id="finances-view-container"></div>
     </div>
     
+    <!-- DODANO: Kontener dla modułu Arena -->
+    <div id="m-arena" class="tab-content">
+        <!-- Moduł Sports Arena będzie renderowany tutaj -->
+    </div>
+    
     <!-- DODANO: Kontener dla modułu League -->
     <div id="m-league" class="tab-content">
         <!-- Moduł League będzie renderowany tutaj -->
